--- a/themes/pehtheme-hugo/layouts/_default/list.html
+++ b/themes/pehtheme-hugo/layouts/_default/list.html
@@ -6,7 +6,7 @@
 
   <section class="md:col-span-2">
 
-    <h2 class="text-3xl font-bold mb-10">{{ .Title | humanize }}</h2>
+    <h2 class="text-3xl font-bold mb-10">{{ partial "turkish-titlecase.html" .Title }}</h2>
 
     <div id="paginatedPosts">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-y-10 gap-x-4">
@@ -23,11 +23,11 @@
 
       <div class="flex items-center mt-10">
         {{- if .Paginator.HasPrev -}}
-          <a class="border rounded-full px-6 py-2 hover:bg-zinc-200 mr-auto" href="{{ .Paginator.Prev.URL }}">← Previous</a>
+          <a class="border rounded-full px-6 py-2 hover:bg-zinc-200 mr-auto" href="{{ .Paginator.Prev.URL }}">← Önceki</a>
         {{- end -}}
 
         {{- if .Paginator.HasNext -}}
-          <a class="border rounded-full px-6 py-2 hover:bg-zinc-200" href="{{ .Paginator.Next.URL }}">Next →</a>
+          <a class="border rounded-full px-6 py-2 hover:bg-zinc-200" href="{{ .Paginator.Next.URL }}">Sonraki →</a>
         {{- end -}}
       </div>
     </div>
