--- a/themes/pehtheme-hugo/layouts/partials/footer.html
+++ b/themes/pehtheme-hugo/layouts/partials/footer.html
@@ -23,15 +23,21 @@
 
     <div class="self-center flex flex-col w-full md:w-2/5">
 
-{{ partial "content/social-media.html" . }}
+      {{ partial "content/social-media.html" . }}
 
     </div>
     
   </div>
 
+  <div class="my-8">
+    <ul class="flex items-center space-x-4">
+        <a class="decoration-auto hover:underline font-semibold" href="/about">Hakkımızda</a>
+    </ul>
+  </div>
+
   <div class="border-t pt-4">
 
-    <p class="text-sm">Copyright © {{ now.Year }} Adımlar. Theme by Fauzan My, licensed under <a href="https://opensource.org/licenses/MIT">MIT</a></p>
+    <p class="text-sm">© {{ now.Year }} Adımlar. Tüm hakları saklıdır.</p>
 
   </div>
   
