--- a/themes/pehtheme-hugo/layouts/partials/search.html
+++ b/themes/pehtheme-hugo/layouts/partials/search.html
@@ -2,9 +2,9 @@
 	<form id="searchForm" class="flex items-stretch" action="/search/" method="GET">
 	<input name="q"
 			id="globalSearchInput"
-			class="w-full block px-6 py-2 rounded-l-full focus:outline-none border border-zinc-200"
+			class="w-full block px-6 py-2 rounded-l-full focus:outline-none bg-ivory border border-zinc-200"
 			type="text" placeholder="Ara...">
-	<button class="flex items-center px-7 py-2.5 rounded-r-full border border-zinc-200" type="submit">
+	<button class="flex items-center px-7 py-2.5 rounded-r-full bg-zinc-100 hover:bg-zinc-200 border border-zinc-200" type="submit">
 		<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" viewBox="0 0 16 16">
 		<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
 		</svg>
