--- a/themes/pehtheme-hugo/layouts/partials/content/newsletter.html
+++ b/themes/pehtheme-hugo/layouts/partials/content/newsletter.html
@@ -18,7 +18,7 @@
 
 				<input class="w-full lg:w-3/5 px-6 py-2 rounded-full" type="text" placeholder="Email...">
 
-				<button class="w-full lg:w-2/5 px-6 py-2 rounded-full bg-white">Subscribe</button>
+				<button class="w-full lg:w-2/5 px-6 py-2 rounded-full bg-ivory">Subscribe</button>
 
 			</form>
 		</div>
