--- a/themes/pehtheme-hugo/layouts/partials/menu.html
+++ b/themes/pehtheme-hugo/layouts/partials/menu.html
@@ -22,8 +22,8 @@ Renders a menu for the given menu ID.
   {{- $page := .page }}
   {{- range .menuEntries }}
     {{- $attrs := dict "href" .URL }}
-    {{- /* Add the "rounded-full border px-6 py-2 bg-zinc-100 hover:bg-zinc-200" class to all links */}}
-    {{- $attrs = merge $attrs (dict "class" "rounded-full border px-6 py-2 bg-zinc-100 hover:bg-zinc-200") }}
+    {{- /* Add the "rounded-full border px-6 py-2 bg-ivory hover:bg-zinc-200" class to all links */}}
+    {{- $attrs = merge $attrs (dict "class" "rounded-full border px-6 py-2 bg-ivory hover:bg-zinc-200") }}
     
     {{- if $page.IsMenuCurrent .Menu . }}
       {{- /* Add the "active:bg-zinc-300" class if the link is the current page */}}
@@ -32,7 +32,7 @@ Renders a menu for the given menu ID.
       {{- $attrs = merge $attrs (dict "aria-current" "page") }}
     {{- else if $page.HasMenuCurrent .Menu .}}
       {{- /* Add the "ancestor" class if the link is an ancestor of the current page */}}
-      {{- $attrs = merge $attrs (dict "class" "ancestor") }}
+      {{- /* $attrs = merge $attrs (dict "class" "ancestor") */}}
       {{- /* Add the "aria-current" attribute */}}
       {{- $attrs = merge $attrs (dict "aria-current" "true") }}
     {{- end }}
