--- a/themes/pehtheme-hugo/layouts/partials/header.html
+++ b/themes/pehtheme-hugo/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <div class="max-w-7xl mx-auto px-4 md:px-6 lg:px-8 flex flex-col">
-	<div class="flex items-center">
-		<div class="flex items-stretch mt-3">
+	<div class="flex items-center py-3">
+		<div class="flex items-stretch">
 			<!-- Hamburger Button -->
 			<button
 				class="flex items-center px-4 py-2 rounded-l-full bg-ivory hover:bg-zinc-200 border border-zinc-200 toggle-button"
