--- a/themes/pehtheme-hugo/layouts/_default/baseof.html
+++ b/themes/pehtheme-hugo/layouts/_default/baseof.html
@@ -5,13 +5,13 @@
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
-  <header class="py-6 border-b bg-zinc-100">
+  <header class="py-6 border-b bg-bisque">
     {{- partial "header.html" . -}}
   </header>
   <main class="max-w-7xl mx-auto px-4 md:px-6 lg:px-8">
     {{- block "main" . }}{{ end -}}
   </main>
-  <footer class="bg-zinc-100 py-10 md:py-14">
+  <footer class="bg-bisque py-10 md:py-14">
     {{- partial "footer.html" . -}}
   </footer>
   <script>
