--- a/themes/pehtheme-hugo/layouts/_default/home.html
+++ b/themes/pehtheme-hugo/layouts/_default/home.html
@@ -3,7 +3,7 @@
 <!-- Feature post by tag = "feature" -->
 <!--
 {{- range where .Site.RegularPages "Params.tags" "intersect" (slice "feature" ) | first 1 -}}
-<section class="block md:flex relative group p-6 lg:p-10 space-y-6 md:space-x-6 my-14 bg-zinc-100 rounded-3xl hover:bg-blue-100">
+<section class="block md:flex relative group p-6 lg:p-10 space-y-6 md:space-x-6 my-14 bg-bisque rounded-3xl hover:bg-ivory">
   <figure class="basis-1/2 w-full aspect-video overflow-hidden rounded-2xl border">
 
     {{- if .Params.image }}
@@ -44,7 +44,7 @@
 
       <h2 class="text-3xl md:text-4xl font-bold mr-auto">{{ $cat | humanize }}</h2>
 
-      <a class="border rounded-full py-2 px-4 md:px-6 hover:bg-blue-100" href="{{ printf "/categories/%s" $cat | absURL }}">View All</a>
+      <a class="border rounded-full py-2 px-4 md:px-6 hover:bg-ivory" href="{{ printf "/categories/%s" $cat | absURL }}">View All</a>
     </div>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-x-6 gap-y-10">
@@ -89,11 +89,11 @@
 
     <div class="flex items-center mt-10">
       {{- if $paginator.HasPrev -}}
-        <a class="border rounded-full px-6 py-2 hover:bg-zinc-200 mr-auto" href="{{ $paginator.Prev.URL }}">← Geri</a>
+        <a class="border rounded-full px-6 py-2 bg-bisque hover:bg-ivory mr-auto" href="{{ $paginator.Prev.URL }}">← Geri</a>
       {{- end -}}
 
       {{- if $paginator.HasNext -}}
-        <a class="border rounded-full px-6 py-2 hover:bg-zinc-200" href="{{ $paginator.Next.URL }}">İleri →</a>
+        <a class="border rounded-full px-6 py-2 bg-bisque hover:bg-ivory" href="{{ $paginator.Next.URL }}">İleri →</a>
       {{- end -}}
     </div>
 
