--- a/themes/pehtheme-hugo/layouts/partials/content/aside-banner.html
+++ b/themes/pehtheme-hugo/layouts/partials/content/aside-banner.html
@@ -1,4 +1,4 @@
-<div class="rounded-2xl p-4 bg-zinc-100 mb-10">
+<div class="rounded-2xl p-4 bg-bisque mb-10">
 
 		<img class="aspect-video rounded" src="/images/email-3249062_1280_by-Muhammad-Ribkhan-Pixabay.jpg" alt="Banner Email Marketing">
 
