--- a/themes/pehtheme-hugo/layouts/partials/header.html
+++ b/themes/pehtheme-hugo/layouts/partials/header.html
@@ -3,7 +3,7 @@
 		<div class="flex items-stretch">
 			<!-- Hamburger Button -->
 			<button
-				class="flex items-center px-4 py-2 rounded-l-full bg-ivory hover:bg-zinc-200 border border-zinc-200 toggle-button"
+				class="flex items-center px-4 py-2 rounded-l-full bg-ivory hover:bg-chino border border-coral-reef toggle-button"
 				data-target="menu-bar"
 				type="button"
 			>
@@ -13,7 +13,7 @@
 			</button>
 
 			<!-- Title Box -->
-			<div class="px-6 py-2 rounded-r-full bg-ivory hover:bg-zinc-200 border-t border-b border-r border-zinc-200 text-xl font-bold uppercase flex items-center">
+			<div class="px-6 py-2 rounded-r-full bg-ivory hover:bg-chino border-t border-b border-r border-coral-reef text-xl font-bold uppercase flex items-center">
 				{{ if .IsHome }}
 				<h1 class="m-0">
 					<a href="{{ .Site.BaseURL }}" class="hover:underline focus:outline-none">
@@ -30,7 +30,7 @@
 			</div>
 		</div>
 		<div class="flex items-center ml-auto">
-			<button class="flex items-center rounded-full p-3 bg-ivory hover:bg-zinc-200 toggle-button" data-target="search-bar">
+			<button class="flex items-center rounded-full p-3 bg-ivory hover:bg-chino toggle-button" data-target="search-bar">
 				<svg width="18" height="18" fill="currentColor" viewBox="0 0 16 16">
 					<path id="path1" class="transition-all ease-linear" d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
 					<path id="path2" class="transition-all ease-linear hidden" d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"></path>
