--- a/themes/pehtheme-hugo/layouts/partials/menu.html
+++ b/themes/pehtheme-hugo/layouts/partials/menu.html
@@ -22,12 +22,12 @@ Renders a menu for the given menu ID.
   {{- $page := .page }}
   {{- range .menuEntries }}
     {{- $attrs := dict "href" .URL }}
-    {{- /* Add the "rounded-full border px-6 py-2 bg-ivory hover:bg-zinc-200" class to all links */}}
-    {{- $attrs = merge $attrs (dict "class" "rounded-full border px-6 py-2 bg-ivory hover:bg-zinc-200") }}
+    {{- /* Add the "rounded-full border px-6 py-2 bg-ivory hover:bg-chino" class to all links */}}
+    {{- $attrs = merge $attrs (dict "class" "rounded-full border px-6 py-2 bg-ivory hover:bg-chino") }}
     
     {{- if $page.IsMenuCurrent .Menu . }}
       {{- /* Add the "active:bg-zinc-300" class if the link is the current page */}}
-      {{- $attrs = merge $attrs (dict "class" (printf "%s %s" $attrs.class "border-zinc-400")) }}
+      {{- $attrs = merge $attrs (dict "class" (printf "%s %s" $attrs.class "border-coffee")) }}
       {{- /* Add the "aria-current" attribute */}}
       {{- $attrs = merge $attrs (dict "aria-current" "page") }}
     {{- else if $page.HasMenuCurrent .Menu .}}
