--- a/themes/pehtheme-hugo/layouts/partials/terms.html
+++ b/themes/pehtheme-hugo/layouts/partials/terms.html
@@ -17,7 +17,7 @@ For a given taxonomy, renders a list of terms assigned to the page.
 
       <li class="font-semibold my-4">{{ $label }}:</li>
       {{- range . }}
-        <li ><a class="py-2 px-6 border rounded-full hover:bg-zinc-100 active:bg-zinc-300" href="{{ .RelPermalink }}">{{ partial "turkish-titlecase.html" .Name }}</a></li>
+        <li ><a class="py-2 px-6 border rounded-full bg-bisque hover:bg-ivory active:bg-zinc-300" href="{{ .RelPermalink }}">{{ partial "turkish-titlecase.html" .Name }}</a></li>
       {{- end }}
     </ul>
 
