--- a/themes/pehtheme-hugo/layouts/_default/home.html
+++ b/themes/pehtheme-hugo/layouts/_default/home.html
@@ -69,7 +69,7 @@
 
     <div class="flex items-center mb-6">
 
-      <h2 class="text-3xl md:text-4xl font-bold mr-auto">En yeni yazılarımız</h2>
+      <h2 class="text-3xl md:text-4xl font-bold mr-auto py-6">En yeni yazılarımız</h2>
 
     </div>
 
