--- a/themes/pehtheme-hugo/layouts/_default/home.html
+++ b/themes/pehtheme-hugo/layouts/_default/home.html
@@ -67,7 +67,7 @@
 
   <section class="mb-16">
 
-    <div class="flex items-center mb-6">
+    <div class="flex items-center">
 
       <h2 class="text-3xl md:text-4xl font-bold mr-auto py-6">En yeni yazılarımız</h2>
 
